# pywire

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README.md  debug_tree.rs  hatch_build.py  pyproject.toml  setup.py  ty_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-docs.yml  docs-wasm-build.yml  publish.yml
docs/: .gitignore  .prettierignore  .prettierrc  astro.config.mjs  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.mjs
docs/public/: shim.py
docs/public/_pywire/static/: pywire.core.min.js  pywire.dev.min.js
docs/public/grammars/: pywire.tmLanguage.json
docs/scripts/: build-assets.mjs  check  lint
docs/src/: content.config.ts  pywire-worker.ts  sw.ts
docs/src/components/: Head.astro
docs/src/components/tutorial/: BrowserPreview.tsx  Editor.tsx  LoadingSpinner.tsx  MarkdownRenderer.tsx  Modal.tsx  Preview.tsx  SuccessValidator.ts  TasksChecklist.tsx  TutorialEngine.ts  TutorialHierarchy.tsx  TutorialWorkspace.tsx  types.ts
docs/src/components/tutorial/tree/: TutorialFileTree.tsx
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: events.md  reactivity.md  wire-file.md
docs/src/content/docs/guides/: app-initialization.md  cli.md  deployment.md  editor-setup.md  forms.md  getting-started.md  introduction.md  layouts.md  quickstart.md  routing.md  testing.md  tutorial-architecture.md  tutorial.md  walkthrough.md  your-first-component.md
docs/src/content/docs/reference/: api.md
docs/src/content/docs/syntax/: blocks.md  control-flow.md  event-modifiers.md  templating.md
docs/src/content/docs/tutorial/: 01-hello-world.mdx  02-counter.mdx  02-reactivity.mdx  03-file-system.mdx  04-locked-files.mdx
docs/src/content/docs/tutorial/01-introduction/: 01-welcome.mdx  02-first-page.mdx  03-interpolation.mdx  04-dynamic-attributes.mdx  05-styling.mdx  06-escaped-html.mdx
docs/src/content/docs/tutorial/02-reactivity/: 01-wire.mdx  02-namespace.mdx
docs/src/content/docs/tutorial/03-events/: 01-basic-events.mdx  02-expressions.mdx  03-modifiers.mdx
docs/src/content/docs/tutorial/04-control-flow-blocks/: 01-conditionals.mdx  02-loops.mdx  03-async-await.mdx  04-try-blocks.mdx
docs/src/content/docs/tutorial/04-logic/: 01-if.mdx  02-show.mdx  03-for.mdx
docs/src/content/docs/tutorial/05-components/: 01-basic.mdx  02-props.mdx  03-spreading.mdx
docs/src/content/docs/tutorial/05-control-flow-attributes/: 01-if.mdx  02-show.mdx  03-for.mdx
docs/src/content/docs/tutorial/06-components/: 01-basic.mdx  02-props.mdx  03-spreading.mdx
docs/src/content/docs/tutorial/06-directives/: 01-path.mdx  02-layout.mdx  03-component.mdx
docs/src/content/docs/tutorial/07-directives/: 01-component.mdx  03-path-single.mdx  04-layout.mdx
docs/src/content/docs/tutorial/07-routing/: 01-explicit.mdx
docs/src/content/docs/tutorial/08-routing/: 01-explicit.mdx  02-path-dict.mdx
docs/src/data/: changelog.ts
docs/src/hooks/: useTutorialStorage.ts
docs/src/pages/tutorial/: [...slug].astro  index.astro
docs/src/styles/: custom.css  pywire-tutorial.css
rust/: lib.rs
scripts/: build  check  coverage  install  lint  test
src/pywire/: __init__.py  _version.py
src/pywire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pywire/cli/: generators.py  main.py  tui.py
src/pywire/client/: .prettierignore  build.mjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
src/pywire/client/src/: pywire.core.ts  pywire.dev.ts
src/pywire/client/src/core/: app.test.ts  app.ts  dom-updater.test.ts  dom-updater.ts  index.ts  logger.ts  transport-manager.test.ts  transport-manager.ts
src/pywire/client/src/core/transports/: base.ts  http.ts  index.ts  websocket.ts  webtransport.ts
src/pywire/client/src/dev/: dev-app.ts  error-trace.test.ts  error-trace.ts  index.ts  status-overlay.ts
src/pywire/client/src/events/: handler.test.ts  handler.ts
src/pywire/compiler/: ast_nodes.py  build.py  build_artifacts.py  exceptions.py  parser.py  paths.py  preprocessor.py
src/pywire/compiler/attributes/: events.py  form.py  loop.py
src/pywire/compiler/codegen/: generator.py  template.py
src/pywire/compiler/codegen/attributes/: events.py
src/pywire/compiler/codegen/directives/: path.py
src/pywire/compiler/directives/: component.py  context.py  layout.py  path.py  props.py
src/pywire/compiler/interpolation/: base.py  jinja.py
src/pywire/core/: expose.py  props.py  signals.py  wire.py
src/pywire/runtime/: aioquic_server.py  app.py  compile_error_page.py  debug.py  dev_server.py  error_page.py  error_renderer.py  escape.py  helpers.py  http_transport.py  importer.py  loader.py  logging.py  page.py  router.py  upload_manager.py  validation.py  websocket.py  webtransport_handler.py
src/pywire/static/: pywire.core.min.js  pywire.dev.min.js
src/pywire/templates/error/: 404.html  500.html  base.html  compile_error.html
tests/: manual_test_import.py  manual_test_phase3.py  manual_test_props.py  repro_interpolation_routing.py  test_app_exhaustive.py  test_app_mode.py  test_app_runtime.py  test_async_features.py  test_attribute_shorthand.py  test_codegen_generator.py  test_codegen_template.py  test_codegen_template_exhaustive.py  test_compile_error.py  test_compiler_sourcemap.py  test_comprehensive_python_syntax.py  test_config.py  test_control_flow.py  test_control_flow_v017.py  test_custom_errors.py  test_debug_middleware.py  test_file_routing.py  test_fixes.py  test_form_validation.py  test_generator_advanced.py  test_head_codegen.py  test_hooks_removal.py  test_http_transport.py  test_inline_compilation.py  test_interactivity_codegen_complex.py  test_jinja_interpolation.py  test_layouts.py  test_lifecycle_hooks.py  test_middleware_error.py  test_naming_conventions.py  test_no_update.py  test_parser_compiler.py  test_partial_updates.py  test_pjax_error.py  test_reactive_attributes.py  test_reload_permanent_attributes.py  (+23 more)
tests/repro_path_resolution/: run_repro.py
tests/repro_path_resolution/project/src/: app.py
