[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pywire"
authors = [
    { name="Reece Holmdahl", email="reece@pywire.dev" },
]
dynamic = ["version"]
description = "HTML-over-the-wire Python web framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.35.0",
    "uvicorn[standard]>=0.27.0",
    "watchfiles>=0.21.0",
    "jinja2>=3.1.0",  # For initial template parsing
    "msgpack>=1.0.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "textual>=7.4.0",
    "rich-click>=1.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ty",
    "httpx>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "msgpack-types",
    "nox",
    "build>=1.0.0",
]
http3 = [
    "aioquic>=0.9.0",
    "hypercorn>=0.14.0",
]

[project.scripts]
pywire = "pywire.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pywire"]
include = [
    "src/pywire/static/**",
    "src/pywire/templates/**",
]
exclude = [
    "**/node_modules/",
]

[tool.hatch.build.targets.wheel.force-include]
"src/pywire/static" = "pywire/static"

[tool.hatch.build.targets.sdist]
exclude = [
    "**/node_modules",
]

[tool.hatch.build.targets.sdist.force-include]
"src/pywire/static" = "src/pywire/static"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release", git_describe_command = "git describe --dirty --tags --long --match v*", tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+.*)" }

[tool.hatch.build.hooks.vcs]
version-file = "src/pywire/_version.py"

[tool.hatch.build.hooks.custom]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [
    "docs/public/shim.py",
]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "aioquic.**",
    "cryptography.**",
    "hypercorn.**",
    "hatchling.**",
    "lxml.**",
    "js",
    "pyodide.**",
]

[[tool.ty.overrides]]
include = ["tests/**"]
rules = { possibly-missing-attribute = "ignore", invalid-argument-type = "ignore", unresolved-attribute = "ignore", call-non-callable = "ignore", invalid-method-override = "ignore", redundant-cast = "ignore" }
