[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pywire"
version = "0.1.10"
authors = [
    { name="Reece Holmdahl", email="reece@pywire.dev" },
]
description = "HTML-over-the-wire Python web framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.35.0",
    "uvicorn[standard]>=0.27.0",
    "watchfiles>=0.21.0",
    "jinja2>=3.1.0",
    "msgpack>=1.0.0",
    "pydantic>=2.0.0",
    "textual>=7.4.0",
    "rich-click>=1.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ty",
    "httpx>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "msgpack-types",
    "nox",
    "build>=1.0.0",
]
http3 = [
    "aioquic>=0.9.0",
    "hypercorn>=0.14.0",
]

[project.scripts]
pywire = "pywire.cli.main:cli"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "src"
module-name = "pywire._pywire_parser"
features = ["pyo3/extension-module"]
include = [
    { path = "src/pywire/static/**", format = "sdist" },
    { path = "src/pywire/templates/**", format = "sdist" },
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = ["docs/public/shim.py"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "pywire._pywire_parser",
    "aioquic.**",
    "cryptography.**",
    "hypercorn.**",
    "hatchling.**",
    "lxml.**",
    "js",
    "pyodide.**",
]

[[tool.ty.overrides]]
include = ["tests/**"]
rules = { possibly-missing-attribute = "ignore", invalid-argument-type = "ignore", unresolved-attribute = "ignore", call-non-callable = "ignore", invalid-method-override = "ignore", redundant-cast = "ignore" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["emsdk", "docs", "src/pywire/client"]
addopts = "--cov=pywire"
asyncio_mode = "strict"
